--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mini-css-extract-plugin": "^2.9.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
+    "typedoc": "^0.26.7",
     "typescript": "^5"
   }
 }
