--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.3"
