--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.13.2",
     "next": "14.2.13",
     "react": "^18",
+    "react-confetti-boom": "^1.0.0",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
